# project-flow

./: .gitignore  README.md  pyproject.toml  report.md
api/: main.py
output/: post.md
src/project_flow/: main.py
src/project_flow/crews/analisator/: analisator.py
src/project_flow/crews/analisator/config/: agents.yaml  tasks.yaml
src/project_flow/crews/anomaly/: anomaly.py
src/project_flow/crews/anomaly/config/: agents.yaml  tasks.yaml
src/project_flow/crews/content_crew/: content_crew.py
src/project_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
src/project_flow/crews/developer_crew/: developer_crew.py
src/project_flow/crews/developer_crew/config/: agents.yaml  tasks.yaml
src/project_flow/crews/file_analyzer/: file_analyzer.py
src/project_flow/crews/file_analyzer/config/: agents.yaml  tasks.yaml
src/project_flow/crews/helmet_detector/: helmet_detector.py
src/project_flow/crews/helmet_detector/config/: agents.yaml  tasks.yaml
src/project_flow/crews/system_analyst/: system_analyst.py
src/project_flow/crews/system_analyst/config/: tasks.yaml
src/project_flow/tools/: tool_anomaly.py  tool_helmet_detection.py  tool_report_db.py
tasks/: celery_app.py  celery_task.py
